# grpc_poc

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  RUNBOOK.md  go.mod
client-python/: client.py  main.py  pyproject.toml
client-python/tests/: conftest.py  test_fmt.py  test_rpc.py
proto/: factorize.proto
scripts/: gen.sh
server-go/: main.go
