[project]
name = "client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grpcio>=1.81.0",
    "grpcio-tools>=1.81.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# Make `import client` and the generated `factorize_pb2` resolvable from tests.
pythonpath = ["."]
testpaths = ["tests"]
